objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>CategoryNote__c</fullName>
        <label>CategoryNote</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CategoryTypeLevel__c</fullName>
        <formula>CASE(CategoryType__c,
 &quot;RANGE&quot;  , &quot;1&quot;, &quot;SUBRANGE&quot;, &quot;2&quot;,
&quot;3&quot;)</formula>
        <label>CategoryTypeLevel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryType__c</fullName>
        <label>Category Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PictureDocumentReference__c</fullName>
        <label>Picture Document Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PictureURL__c</fullName>
        <label>Picture URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDHCategoryID__c</fullName>
        <externalId>true</externalId>
        <label>SDHCategoryId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SDHParentCategoryId__c</fullName>
        <label>SDHParentCategoryId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Material_Id__c</fullName>
        <description>it is the unique reference at Schneider level of the material ID</description>
        <label>SE_Material_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_SDHQueryAction__c</fullName>
        <label>TECH_SDHQueryAction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upsert</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SESA108112</fullName>
        <columns>NAME</columns>
        <columns>SDHCategoryID__c</columns>
        <columns>SDHParentCategoryId__c</columns>
        <columns>SE_Material_Id__c</columns>
        <columns>TECH_SDHQueryAction__c</columns>
        <columns>CategoryNote__c</columns>
        <columns>CategoryType__c</columns>
        <columns>CategoryTypeLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CategoryType__c</field>
            <operation>equals</operation>
            <value>RANGE</value>
        </filters>
        <label>All Ranges</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>